--- a/package.json
+++ b/package.json
@@ -26,7 +26,17 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "formatJS": "prettier --write --tab-width 4 \"src/**/*.js\"",
+    "formatSCSS": "prettier --write --tab-width 4 \"src/**/*.scss\"",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+        "npm run formatJS",
+        "npm run formatSCSS",
+        "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
